src/test/deca/codegen/valid/Objets/42asm.deca
class A {
    void toto() asm("WSTR \"testASM\"
    RTS");
}

{
    A a = new A();
    a.toto();
}
