src/test/deca/codegen/invalid/Objets/03asmError.deca
class A {
    void toto() asm("WSTR \"Error: Input/Output error\"
    WNL
    ERROR");
}

{
    A a = new A();
    a.toto();
}
